# flake8-global-variables

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: style.yml  test.yml
flake8_global_variables/: __init__.py  global_variables.py  visitor.py
tests/: conftest.py  test_global_variables.py
tests/fixtures/: correct.py  incorrect.py
