[tool.poetry]
name = "flake8-global-variables"
version = "0.1.0"
description = "Flake8 plugin to forbid global variables"

license = "MIT"

authors = [
  "pacificus <masterkristall@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/pacifikus/flake8-global-variables"
repository = "https://github.com/pacifikus/flake8-global-variables"

[tool.poetry.plugins."flake8.extension"]
GV4 = "flake8_global_variables.global_variables:flake8_global_variables"


[tool.poetry.dependencies]
python = "^3.8"
#flake8 = ">=3.5,<6"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

flake8-print = "^4.0"
flake8-builtins = "^1.5"
flake8-commas = "^2.0"
flake8-quotes = "^3.2"
flake8-comprehensions = "^3.5"
flake8-docstrings = "^1.6"
flake8-string-format = "^0.3"
flake8-bugbear = "^22.9"
flake8-pep3101 = "^1.3"
flake8-debugger = "^4.0"
flake8-isort = "^4.2.0"
pep8-naming = "^0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
